--- a/layanan.html
+++ b/layanan.html
@@ -99,7 +99,7 @@
     <div class="footer-container">
         <div class="footer-section">
             <h3>Tentang Kami</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>perusahaan hosting web yang murah, terpecaya, dan aman.</p>
         </div>
         <div class="footer-section">
             <h3>link</h3>
@@ -124,7 +124,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
+        <p>&copy; 2023 DewaHostingan. All rights reserve.</p>
     </div>
 </footer>
 </html>
