--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="footer-container">
         <div class="footer-section">
             <h3>Tentang Kami</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>DewaHostingan, perusahaan penyedia jasa hosting terpecaya, murahm dan aman.</p>
         </div>
         <div class="footer-section">
             <h3>link</h3>
@@ -195,7 +195,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2023 Your Company. All rights reserved.</p>
+        <p>&copy; 2023 DewaHostingan. All rights reserved.</p>
     </div>
 </footer>
 
